<resources>
    <string name="app_name">Performance</string>
    <string name="title_feed">Feed</string>
    <string name="title_performance">Performance</string>
    <string name="title_courses">Courses</string>
    <string name="title_me">Me</string>
    <string name="title_more">More</string>
    <string name="title_rounds">Rounds</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_overall">Overall</string>
    <string name="title_number_rounds">0</string>
    <string name="title_splashscreen">GOLF PERFORMANCE CHALLENGE</string>
    <string name="percentage">0.0%</string>
    <string name="average">0</string>
    <string name="value">0.0</string>
    <string name="title_driving_accuracy">Driving Accuracy</string>
    <string name="info_driving_accuracy">Fairways Hit</string>
    <string name="title_putting">Putting</string>
    <string name="info_putting">Average Putts</string>
    <string name="title_recovery">Recovery</string>
    <string name="info_recovery">Up\u0026Down</string>
    <string name="title_greens_ir">Greens in Regulation</string>
    <string name="info_greens_ir">Hit</string>
    <string name="title_scores_bp">Scores by Par</string>
    <string name="info_scores_bp">Hit</string>
    <string name="title_scoring">Scoring</string>
    <string name="info_scoring">Par</string>
    <string name="round_date">2020/01/01</string>
    <string name="course_name">Course name</string>
    <string name="number_holes">0 HOLES</string>
    <string name="score">0</string>
    <string name="subscore">0</string>
    <string name="month_year">Month - Year</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
</resources>
