<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="171dp"
    android:layout_height="96dp">

    <LinearLayout
        android:id="@+id/containerOverall"
        android:layout_width="171dp"
        android:layout_height="96dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/containerData"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/containerImg"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/circle_img_recovery" >

                <ImageView
                    android:id="@+id/categoryImg"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_empty"/>

            </LinearLayout>

            <TextView
                android:id="@+id/percentageCategoryTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:text="@string/percentage"
                android:textColor="#707581"
                android:textSize="24sp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center|start"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/categoryNameTv"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/category_name"
                android:textColor="#707581"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/categoryDescripitonTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/category_description"
                android:textColor="#707581"
                android:textSize="12sp"
                android:textStyle="" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>